--- a/src/stv-launcher/stv-launcher.html
+++ b/src/stv-launcher/stv-launcher.html
@@ -10,6 +10,10 @@
     <template>
         <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
 
+            :host {
+                font-size: 16px;
+            }
+
             #dropdown {
                 background-color: #2F2F2F;
                 border: white solid 1px;
@@ -29,8 +33,8 @@
                 color: white;
                 text-align: center;
                 border: transparent solid 1px;
-                width: 120px;
-                height: 120px;
+                width: 95px;
+                height: 95px;
             }
 
             .button > a {
@@ -43,7 +47,7 @@
             }
 
             .icon {
-                width: 80px;
+                width: 64px;
             }
 
             .icon.fa {
