Minor css fixes.

--- a/src/dropdown/stv-dropdown.html
+++ b/src/dropdown/stv-dropdown.html
@@ -86,6 +86,7 @@
             /*content:'\f0da';*/
             position: absolute;
             right: 10px;
+            top: 4px;
         }
 
         :host::content ul li.active,
