--- a/src/file/stv-file-browser.html
+++ b/src/file/stv-file-browser.html
@@ -209,6 +209,11 @@
                 type: Object,
                 observer: 'userDataChanged'
             },
+            enableSelectOk: {
+                type: Boolean,
+                value: false,
+                reflectToAttribute: true
+            },
             folder: {
                 type: Object,
                 notify: true
@@ -262,11 +267,6 @@
                 type: String,
                 reflectToAttribute: true,
                 value: ""
-            },
-            enableSelectOk: {
-                type: Boolean,
-                value: false,
-                reflectToAttribute: true
             },
             loading: {
                 type: Boolean,
@@ -378,8 +378,12 @@
                 if (mode === 'file' && selectedFile != null && selectedFile._id != null && selectedFile.type == 'FILE') {
                     return true;
                 }
-                if (mode === 'folder' && selectedFile != null && selectedFile._id != null && selectedFile.type == 'FOLDER') {
-                    return true;
+                if (mode === 'folder') {
+                    if (selectedFile == null) {
+                        return true
+                    } else if (selectedFile._id != null && selectedFile.type == 'FOLDER' && selectedFile.job == null) {
+                        return true;
+                    }
                 }
             }
             return false;
@@ -558,12 +562,14 @@
                 // console.log(file.name + ' ' + file.id);
                 // console.log(file);
 
-                if(!showHiddenFiles && file.name.charAt(0) == '.'){
+                if (!showHiddenFiles && file.name.charAt(0) == '.') {
                     continue
                 }
 
                 if (this.mode == 'folder') {
                     if (file.type != 'FOLDER') {
+                        continue;
+                    } else if (file.job != null) {
                         continue;
                     }
                 } else if (this.mode == 'file' && bfList.length > 0) {
@@ -584,7 +590,7 @@
                 var exts = el.getAttribute('file-ext').split(',');
                 for (var j = 0; j < exts.length; j++) {
                     var ext = exts[j];
-                    if (Utils.endsWithIgnoreCase(this.selectedFile.name, ext)) {
+                    if (this.selectedFile != null && Utils.endsWithIgnoreCase(this.selectedFile.name, ext)) {
                         found = true;
                         break;
                     }
