--- a/src/stv-header.html
+++ b/src/stv-header.html
@@ -237,7 +237,7 @@
 
                 <content select=".launcher"></content>
 
-                <content select=".cluster_stats"></content>
+                <content select=".cluster-status"></content>
 
                 <content select=".helpmenu"></content>
             </div>
